syntax = "proto3";
package com.example.grpc;

message UserSignUpRequest {
  string email=1;
  string username=2;
  string password=3;
}

message UserSignUpResponse{
  string status=1;
  string uuid=2;
}

message ActivationRequest{
  string token=1;
}

message ActivationResponse{
  string status=1;
  string message=2;
}

service SignUpService{
  rpc signup(UserSignUpRequest) returns (UserSignUpResponse);
  rpc activate(ActivationRequest) returns (ActivationResponse);
}